Fix message being covered by the Mail icon

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -11063,7 +11063,7 @@ span.load-line.awesomeness {
         width: 550px;
         height: 170px;
         bottom: 100px;
-        left: 20px;
+        left: 120px;
         background-color: white;
         display: none;
 
